--- a/IecProjectApp/app/src/main/res/layout/activity_initial_register.xml
+++ b/IecProjectApp/app/src/main/res/layout/activity_initial_register.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Register.InitialRegister">
+    tools:context=".Register">
 
 
     <LinearLayout
@@ -14,6 +14,7 @@
         android:gravity="center"
         android:orientation="vertical">
         <EditText
+            android:id="@+id/text_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
@@ -27,12 +28,14 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/back_button"
         android:layout_width="130dp"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:text="@string/back"
         android:layout_margin="15dp"/>
     <Button
+        android:id="@+id/next_button"
         android:layout_width="130dp"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
