--- a/IecProjectApp/app/src/main/res/layout/activity_main.xml
+++ b/IecProjectApp/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,13 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.root.myapplication.MainActivity"
-    android:onClick="click">
+    android:background="@color/gray"
+    tools:context="com.example.root.myapplication.MainActivity">
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"/>
 </RelativeLayout>
