--- a/IecProjectApp/app/src/main/res/layout/activity_login.xml
+++ b/IecProjectApp/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Login">
+    tools:context=".view.Login">
 
     <!-- Logo -->
     <LinearLayout
@@ -22,10 +22,12 @@
         android:layout_weight="5"
         android:orientation="vertical">
         <EditText
+            android:id="@+id/username_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/user"/>
         <EditText
+            android:id="@+id/password_field"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -43,12 +45,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <Button
+                android:id="@+id/login_button"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/login"/>
             <CheckBox
+                android:id="@+id/connect"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
