--- a/IecProjectApp/app/src/main/res/layout/content_initial_screen.xml
+++ b/IecProjectApp/app/src/main/res/layout/content_initial_screen.xml
@@ -5,7 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".InitialScreen"
+    tools:context=".view.InitialScreen"
     tools:showIn="@layout/app_bar_initial_screen">
+
+        <ListView
+            android:id="@+id/listUsers"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="20dp">
+
+        </ListView>
 
 </LinearLayout>
